k8s/services/dawarich/app/web/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: dawarich-web
spec:
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: dawarich-metrics
spec:
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: metrics
      port: 9394
      targetPort: metrics
      protocol: TCP
