k8s/services/dawarich/app/web/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dawarich
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: dawarich
  hostnames:
    - tracks.lama-corp.space
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: dawarich-web
          port: 80
